# hqr-generate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.bundler.js  index.d.ts  index.js  index.web.js  package-lock.json  package.json  test.html
bundler/: react.d.ts  react.js
react/: index.d.ts  index.js  useGenerateSvg.d.ts  useGenerateSvg.js
react-src/: useGenerate.ts  useGenerateSvg.ts
src/: decode.rs  generate.rs  lib.rs  wasm.rs
