[package]
name = "hqr-generate"
version = "0.1.0"
edition = "2024"
description = "Stable black/white QR code generator (PNG data URL) powered by Rust + WASM"
license = "MIT"
repository = "https://github.com/heart569522/hqr-generate"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
qrcode = "0.14"
png = "0.17"
base64 = "0.22" # ถ้ายังเก็บ data_url ไว้
